--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
         "build": "vite build"
     },
     "dependencies": {
+        "@heroicons/react": "^2.0.16",
+        "@reduxjs/toolkit": "^1.9.3",
         "autoprefixer": "^10.4.13",
-        "axios": "^1.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.7"
+        "react-hook-form": "^7.43.5",
+        "react-hot-toast": "^2.4.0",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.8.1",
+        "react-toastify": "^9.1.1",
+        "tailwindcss": "^3.2.7",
+        "yup": "^1.0.2"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.2.0",
@@ -17,8 +24,9 @@
         "@types/node": "^18.14.0",
         "@types/react": "^18.0.18",
         "@types/react-dom": "^18.0.11",
+        "@types/react-redux": "^7.1.25",
         "@vitejs/plugin-react": "^3.1.0",
-        "eslint": "^8.34.0",
+        "eslint": "^8.37.0",
         "laravel-vite-plugin": "^0.7.4",
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
